@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Tst13RunAction.cc,v 1.1 1999-01-08 16:35:47 gunter Exp $
+// $Id: Tst13RunAction.cc,v 1.2 1999-04-17 08:38:45 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -24,12 +24,12 @@ Tst13RunAction::~Tst13RunAction()
 {
 }
 
-void Tst13RunAction::BeginOfRunAction(G4Run* aRun)
+void Tst13RunAction::BeginOfRunAction(const G4Run* aRun)
 {
-  aRun->SetRunID(runIDcounter++);
+   ((G4Run*)(aRun))->SetRunID(runIDcounter++);
 }
 
-void Tst13RunAction::EndOfRunAction(G4Run* aRun)
+void Tst13RunAction::EndOfRunAction(const G4Run*)
 {
 }
 
