@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-08 16:35:43 gunter Exp $
+$Id: History,v 1.2 1999-04-17 08:38:39 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,11 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+17 Apr., 1999 H.Kurashige 
+- Modify SetCuts() and ConstructParticle() in Tst13PhysicsList
+- Modify BeginOfRunAction() and EndOfRunAction() in Tst13RunAction
+- Modify UserSteppingAction() in Tst13SteppingAction
+
 
 30th November 1998  John Allison
 - Copied from test02 with new physics list for neutrons prepared by Hans-Peter.
